 -- Fix appearance of RxLevel and TxLevel in examine.
 -- Fix executor in Reality levels code so that is isn't always #0.
 -- Improve error message for '@mail *name' where players might have
    either mispelled the player name or attempted to use a @malias
    without including the subject.
 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased the space available to WHO for @moniker names to provide
    more room for more ANSI transitions.
 -- Remove references to have_macros in wizhelp.txt
 -- Removed mention of SIDEFX flag from help topic as this is an
    Rhost-ism.
 -- Begin making comments doxygen-compatible.


Miscellaneous:
~~~~~~~~~~~~~
 -- Added ATTACK notes.
 -- Added @folder as an alias for @mail/folder and @file as an alias for
    @mail/file.
 -- Remove configure checks for mktime() and timelocal().
 -- Alierak removed the last two direct uses of delim_check in lnum()
    and lcmds().
 -- Alierak removed stale code in add_player_name() since disallowed
    names are stored separately.
 -- Alierak moved the login mail check into announce_connect() to
    clarify the purpose of record_login().
 -- Alierak refactored the logged-out commands code, removing some
    unreachable code in do_command() and clarifying how logged-out
    commands are handled.
 -- Alierak removed duplicated code relating to setting the MONITOR flag.
 -- Included REALITY and REALITY.SETUP readme files which were
    previously left out of the distribution.
 -- Removed BTMUX patch surfaces as their approach has changed.
 -- Fixed various minor GCC 4.0 build issues.
 -- Verify that pread() and pwrite() can actually be used.
 -- Ashen-Shugar provided muxdbpuller which allows individual objects
    (and attributes on those objects) to be extracted from an offline
    flatfile.  The result is in an @decomp format suitable for quoting.
 -- Added some #defines around FiranMUX-specific behavior.