@@ -1,6 +1,6 @@
 // functions.cpp -- MUX function handlers.
 //
-// $Id: functions.cpp,v 1.169 2006/08/03 19:05:18 sdennis Exp $
+// $Id: functions.cpp,v 1.170 2006/11/26 05:05:21 sdennis Exp $
 //
 // MUX 2.4
 // Copyright (C) 1998 through 2005 Solid Vertical Domains, Ltd. All
@@ -5199,8 +5199,13 @@ static FUNCTION(fun_iter)
     }
     bool first = true;
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -5213,8 +5218,11 @@ static FUNCTION(fun_iter)
         first = false;
         number++;
         char *objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         str = buff2;
@@ -5223,8 +5231,11 @@ static FUNCTION(fun_iter)
         free_lbuf(buff2);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
@@ -5301,8 +5312,13 @@ static FUNCTION(fun_list)
         return;
     }
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -5310,8 +5326,11 @@ static FUNCTION(fun_list)
     {
         number++;
         objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         dp = result = alloc_lbuf("fun_list.2");
@@ -5324,8 +5343,11 @@ static FUNCTION(fun_list)
         free_lbuf(result);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
