@@ -339,6 +339,12 @@ Performance Enhancements:
     without including the subject.
  -- In MEMORY_BASED, avoid malloc() call each time an attribute is
     added to an object.
+ -- Added separate recursion limit protection on nesting of iter() and
+    list() (Issue 216). MAX_ITEXT is 100, but raising the function
+    recursion limit above that leaves iter() and list() open to step
+    on nearby mudstate structures including help and global_registers.
+ -- Fixed crash due to failure to clear @program data after logout
+    (Issue 217).  Found and fixed by Alierak.
 
 
 Cosmetic Changes:
